- 修改 首页 标题 - 微调 首页/设置页面 布局

--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
   <ion-item-group>
     <ion-item>
       <ion-avatar item-left>
@@ -67,7 +67,7 @@
       <ion-note item-right> {{ appVersion }}</ion-note>
     </ion-item>
   </ion-item-group>
-  <br>
+
   <!--用户登出-->
   <div padding>
     <button (click)="logout()" ion-button block color="danger">{{ 'Setting.Logout' | translate }}</button>
