--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <ion-slides style="height: 100px;">
 
     <ion-slide style="background-color: green">
@@ -25,15 +25,17 @@
     </ion-slide>
 
   </ion-slides>
-  <h2>Welcome to Ionic!</h2>
+  <div padding>
+    <h2>Welcome to Ionic!</h2>
 
-  <p>{{ 'hello word' | capitalize }}</p>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+    <p>{{ 'hello word' | capitalize }}</p>
+    <p>
+      This starter project comes with simple tabs-based layout for apps
+      that are going to primarily use a Tabbed UI.
+    </p>
+    <p>
+      Take a look at the <code>src/pages/</code> directory to add or change tabs,
+      update any existing page or create new pages.
+    </p>
+  </div>
 </ion-content>
